--- a/style.css
+++ b/style.css
@@ -3,16 +3,16 @@
   padding-left: 10px;
   padding-top: 10px;
   position: fixed;
-  z-index: 1;
   overflow-x: hidden;
+  background-color: transparent;
 }
 
 .navigation a {
   padding-bottom: 5px;
   text-decoration: none;
-  font-size: 20px;
   color: #BFC7D9;
   display: block;
+  font-size: 20px;
 }
 
 .navigation a:hover {
@@ -25,10 +25,10 @@
 
 .header {
   padding-top: 20%;
-  width:100%;
-  height:100vh;
-  text-align: center;
+  padding-left: 150px;
+  margin-left: 10%;
   color: #FFFFFF;
+  z-index: 1;
 }
 
 .homepage {
@@ -44,14 +44,14 @@
   padding-right: 200px;
   padding-top: 50px;
   padding-bottom: 20px;
-  font-size: 20px;
+  min-width: 350px;
+
 }
 
 .am-pic {
-  height: 500px;
+  margin-left: 20%;
+  padding-left: 75px;
   padding-top: 50px;
-  padding-right: 100px;
-  float: left;
 }
 
 .contact {
@@ -83,7 +83,6 @@
 }
 
 #quote {
-  font-size: 45px;
   font-family: "Times New Roman", Times, serif
 }
 
@@ -93,7 +92,6 @@ body {
 }
 
 h1 {
-  font-size: 75px;
   margin: 0;
 }
 
@@ -101,7 +99,6 @@ h3 {
   padding-top: 5px;
   margin-top: 0px;
   margin-bottom: 20px;
-  font-size: 35px;
 }
 
 img {
@@ -113,4 +110,48 @@ img {
   background-color: #3a4660; 
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (min-width: 350px) {
+  h1 {
+    font-size:50px;
+  }
+
+  h3 {
+    font-size: 28px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  #quote {
+    font-size: 30px;
+  }
+
+  .am-pic {
+    height: 300px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  h1 {
+    font-size: 80px;
+  }
+
+  h3 {
+    font-size: 35px;
+  }
+
+  p {
+    font-size: 22px;
+  }
+
+  #quote {
+    font-size: 40px;
+  }
+
+  .am-pic {
+    height: 500px;
+  }
 }
