--- a/style.css
+++ b/style.css
@@ -1,113 +1,128 @@
-.navigation-home, .navigation {
-  width: 100%;
-  padding-left: 10px;
-  padding-top: 10px;
-  position: fixed;
-  overflow-x: hidden;
+.navigation {
+  height: 100%;
+  margin-left: 10px;
+  margin-top: 10px;
+  width: 140px;
+  position: fixed; 
   background-color: transparent;
+  overflow-x: hidden;
 }
 
 .navigation a {
-  padding-bottom: 5px;
-  text-decoration: none;
-  color: #BFC7D9;
   display: block;
-  font-size: 20px;
+  padding-bottom: 2px;
+  text-decoration: none;
+  width: 100%;
+  color: #BFC7D9;
+  font-size: max(1.3vw, 16px);
 }
 
 .navigation a:hover {
   color: #FFFFFF;
 }
 
-.navigation {
-  width: 150px;
-}
-
 .header {
-  padding-top: 20%;
-  padding-left: 150px;
-  margin-left: 10%;
-  color: #FFFFFF;
-  z-index: 1;
-}
-
-.homepage {
-  overflow: hidden;
-}
-
-.aboutme {
-  overflow: hidden;
-}
-
-.projects {
-  overflow-x: hidden;
-}
-
-.main {
-  padding-left: 175px;
-  padding-right: 200px;
-  padding-top: 50px;
-  padding-bottom: 20px;
-  min-width: 350px;
-
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  margin-left: 160px;
 }
 
 .am-pic {
-  margin-left: 20%;
-  padding-left: 75px;
-  padding-top: 50px;
+  width: 100%;
+  height: auto;
+  max-width: 750px;
 }
 
-.contact {
-  padding-top: 350px;
-  font-size: 25px;
-  text-align: center;
+.proj-img {
+  width: 100%;
+  height: auto;
+  max-width: 700px;
 }
 
-.proj_img_2 {
-  text-align: right;
+.tall-img {
+  max-width: 350px;
+}
+
+#quote {
+  font-family: "Times New Roman", Times, serif;
+  font-size: max(2vw, 40px);
+  margin-top: 15px;
+  margin-bottom: 20px;
+
+}
+
+#mainName {
+  font-size: max(4vw, 40px);
+  margin-bottom: 0px;
+  opacity: 0;
+}
+
+#mainDesc {
+  font-size: max(3vw, 30px);
+  margin-top: 0px;
+  opacity: 0;
+}
+
+.homepage {
+  height: 100%;
 }
 
 .subheading {
-  font-size: 20px;
+  font-size: max(0.9vw, 15px);
   padding-bottom: 0px;
   margin-bottom: 0px;
   color: #cfd5e2;
 }
 
+.main {
+  min-width: 300px;
+  margin-left: 155px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-right: 50px;
+}
+
 .date {
-  margin-bottom: 20px;
+  margin: 5px 0px 0px 0px;
 }
 
-.resume {
-  padding-top: 45px;
-  font-size: 25px;
-  text-align: center;
-  
+.proj-images {
+  margin-top: 10px;
 }
 
-#quote {
-  font-family: "Times New Roman", Times, serif
+.documentation-link:hover {
+  color: #BFC7D9;
 }
 
-body {
+.documentation-link {
+  font-size: max(1.3vw, 18px);
+}
+
+.contact {
+  height: 100%;
+}
+
+#resume {
+  font-size: max(1.4vw, 18px);
+}
+
+body, html {
   margin: 0px;
   padding: 0px;
+  height: 100%;
 }
 
-h1 {
-  margin: 0;
+p {
+  font-size: max(1.2vw, 14px);
 }
 
 h3 {
-  padding-top: 5px;
-  margin-top: 0px;
-  margin-bottom: 20px;
-}
-
-img {
-  padding-top: 50px;
-  padding-right: 100px;
+  margin: 0px;
+  font-size: max(2vw, 30px);
 }
 
 * {
@@ -116,46 +131,3 @@ img {
   font-family: 'Roboto', sans-serif;
 }
 
-@media screen and (min-width: 350px) {
-  h1 {
-    font-size:50px;
-  }
-
-  h3 {
-    font-size: 28px;
-  }
-
-  p {
-    font-size: 20px;
-  }
-
-  #quote {
-    font-size: 30px;
-  }
-
-  .am-pic {
-    height: 300px;
-  }
-}
-
-@media screen and (min-width: 700px) {
-  h1 {
-    font-size: 80px;
-  }
-
-  h3 {
-    font-size: 35px;
-  }
-
-  p {
-    font-size: 22px;
-  }
-
-  #quote {
-    font-size: 40px;
-  }
-
-  .am-pic {
-    height: 500px;
-  }
-}
